# EZSetting

./: CMakeLists.txt  README.md  sample.json
src/: breadcrumbs.cpp  breadcrumbs.hpp  json_editor.cpp  json_editor.hpp  json_types.hpp  main.cpp
